# mx-polynetwork-bridge-sc

./: .gitignore  Cargo.toml  README.md
BlockHeaderSync/: Cargo.toml
BlockHeaderSync/interaction/: snippets.sh
BlockHeaderSync/src/: lib.rs
BlockHeaderSync/tests/: block_header_sync_test.rs  mandos_test.rs
BlockHeaderSync/wasm/: Cargo.toml
BlockHeaderSync/wasm/src/: lib.rs
CombinedSnippets/: testnet.toml
CombinedSnippets/interaction/: snippets.sh
CrossChainManagement/: Cargo.toml
CrossChainManagement/interaction/: snippets.sh
CrossChainManagement/mandos/: create_cross_chain_tx_ok.scen.json  deploy.scen.json
CrossChainManagement/src/: lib.rs  token_op.rs
CrossChainManagement/tests/: mandos_test.rs
CrossChainManagement/wasm/: Cargo.toml
CrossChainManagement/wasm/src/: lib.rs
EsdtTokenManager/: Cargo.toml
EsdtTokenManager/interaction/: snippets.sh
EsdtTokenManager/mandos/: burn_wrapped_egld.scen.json  burn_wrapped_eth.scen.json  deploy.scen.json  issue_wrapped_egld.scen.json  issue_wrapped_eth.scen.json  mint_wrapped_egld.scen.json  mint_wrapped_eth.scen.json  unwrap_egld.scen.json  wrap_egld.scen.json
EsdtTokenManager/src/: lib.rs  transfer_esdt_action_result.rs
EsdtTokenManager/wasm/: Cargo.toml
EsdtTokenManager/wasm/src/: lib.rs
EsdtTokenMananger/: Cargo.toml
EsdtTokenMananger/src/: lib.rs
EsdtTokenMananger/tests/: mandos_test.rs
EsdtTokenMananger/wasm/: Cargo.toml
EsdtTokenMananger/wasm/src/: lib.rs
TransactionRelayer/: Cargo.toml
TransactionRelayer/mandos/: lock.scen.json
TransactionRelayer/src/: lib.rs
TransactionRelayer/wasm/: Cargo.toml
TransactionRelayer/wasm/src/: lib.rs
common/: Cargo.toml
common/esdt-payment/: Cargo.toml
common/esdt-payment/src/: lib.rs
common/eth-address/: Cargo.toml
common/eth-address/src/: lib.rs
common/header/: Cargo.toml
common/header/src/: chain_config.rs  lib.rs  peer_config.rs  vbft_block_info.rs
common/header/tests/: deserialization_test.rs
common/merkle-proof/: Cargo.toml
common/merkle-proof/src/: lib.rs
common/public-key/: Cargo.toml
common/public-key/src/: lib.rs
common/signature/: Cargo.toml
common/signature/src/: lib.rs
common/tests/: deserialize.rs  deserialize_helper.rs  serde_test.rs  serialize_helper.rs
common/transaction/: Cargo.toml
common/transaction/src/: lib.rs  to_merkle_value.rs  transaction_args.rs
common/util/: Cargo.toml
common/util/src/: lib.rs
common/zero-copy-sink/: Cargo.toml
common/zero-copy-sink/src/: lib.rs
common/zero-copy-source/: Cargo.toml
common/zero-copy-source/src/: lib.rs
docs/: dev documentation.md  testing cheatsheet.md
mandos/: deploy.scen.json  issue_wrapped_eth_and_add_to_whitelist.scen.json  setup.scen.json
simple-erc20/: Cargo.toml
simple-erc20/src/: lib.rs
simple-erc20/tests/: mandos_test.rs
simple-erc20/wasm/: Cargo.toml
simple-esdt/: Cargo.toml
simple-esdt/src/: lib.rs
simple-esdt/tests/: mandos_test.rs
simple-esdt/wasm/: Cargo.toml
tests/: mandos_tests.rs
