[package]
name = "tests"
version = "0.0.0"
authors = ["Dorin Iancu <dorin.iancu@elrond.com>"]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[features]
wasm-output-mode = ["elrond-wasm-node"]

[dependencies.block-header-sync]
path = "BlockHeaderSync"

[dependencies.cross-chain-management]
path = "CrossChainManagement"

[dependencies.esdt-token-manager]
path = "EsdtTokenManager"

[dependencies.elrond-wasm]
version = "0.12.0"

[dependencies.elrond-wasm-derive]
version = "0.12.0"

[dependencies.elrond-wasm-node]
version = "0.12.0"
optional = true

[dev-dependencies.elrond-wasm-debug]
version = "0.12.0"
