[package]
name = "block-header-sync"
version = "0.0.0"
authors = [ "dorin-iancu <dorin.iancu@elrond.com>",]
edition = "2018"

[lib]
path = "src/lib.rs"

[features]
wasm-output-mode = [ "elrond-wasm-node",]

[dependencies.elrond-wasm]
version = "0.13.0"

[dependencies.elrond-wasm-derive]
version = "0.13.0"

[dependencies.elrond-wasm-node]
version = "0.13.0"
optional = true

[dev-dependencies.elrond-wasm-debug]
version = "0.13.0"

[dependencies.header]
version = "0.0.0"
path = "../common/header"

[dependencies.signature]
version = "0.0.0"
path = "../common/signature"

[dependencies.public-key]
version = "0.0.0"
path = "../common/public-key"

[dependencies.util]
version = "0.0.0"
path = "../common/util"
