[package]
name = "block-header-sync"
version = "0.0.0"
authors = [ "dorin-iancu <dorin.iancu@elrond.com>",]
edition = "2018"

[lib]
path = "src/lib.rs"

[features]
wasm-output-mode = [ "elrond-wasm-node",]

[dependencies.elrond-wasm]
version = "0.18.2"

[dependencies.elrond-wasm-derive]
version = "0.18.2"

[dependencies.elrond-wasm-node]
version = "0.18.2"
optional = true

[dev-dependencies.elrond-wasm-debug]
version = "0.18.2"

[dependencies.header]
path = "../common/header"

[dependencies.signature]
path = "../common/signature"

[dependencies.public-key]
path = "../common/public-key"

[dependencies.eth-address]
path = "../common/eth-address"

[dependencies.util]
path = "../common/util"

[dependencies.hex]
version = "0.4.2"

[dependencies.zero-copy-sink]
version = "0.0.0"
path = "../common/zero-copy-sink"
