[package]
name = "cross-chain-management"
version = "0.0.0"
authors = [ "dorin-iancu <dorin.iancu@elrond.com>",]
edition = "2018"

[lib]
path = "src/lib.rs"

[features]
wasm-output-mode = [ "elrond-wasm-node",]

[dependencies.elrond-wasm]
version = "0.18.2"

[dependencies.elrond-wasm-derive]
version = "0.18.2"

[dependencies.elrond-wasm-node]
version = "0.18.2"
optional = true

[dev-dependencies.elrond-wasm-debug]
version = "0.18.2"

[dependencies.header]
path = "../common/header"

[dependencies.signature]
path = "../common/signature"

[dependencies.transaction]
path = "../common/transaction"

[dependencies.merkle-proof]
path = "../common/merkle-proof"

[dependencies.esdt-payment]
path = "../common/esdt-payment"

[dependencies.util]
path = "../common/util"

[dependencies.block-header-sync]
path = "../BlockHeaderSync"

[dependencies.transaction-relayer]
path = "../TransactionRelayer"
