[package]
name = "esdt-token-manager"
version = "0.0.0"
authors = ["Dorin Iancu <dorin.iancu@elrond.com>"]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[features]
wasm-output-mode = ["elrond-wasm-node"]

[dependencies.transaction]
version = "0.0.0"
path = "../common/transaction"

[dependencies.elrond-wasm]
version = "0.13.0"

[dependencies.elrond-wasm-derive]
version = "0.13.0"

[dependencies.elrond-wasm-node]
version = "0.13.0"
optional = true

[dev-dependencies.elrond-wasm-debug]
version = "0.13.0"
