[package]
name = "transaction-relayer"
version = "0.0.0"
authors = [ "dorin-iancu <dorin.iancu@elrond.com>",]
edition = "2018"

[lib]
path = "src/lib.rs"

[features]
wasm-output-mode = [ "elrond-wasm-node",]

[dependencies.elrond-wasm]
version = "0.18.2"
features = ["derive"]

[dependencies.elrond-wasm-node]
version = "0.18.2"
optional = true

[dev-dependencies.elrond-wasm-debug]
version = "0.18.2"

[dependencies.transaction]
path = "../common/transaction"
