[package]
name = "cross-chain-management-wasm"
version = "0.0.0"
authors = [ "dorin-iancu <dorin.iancu@elrond.com>",]
edition = "2018"

[lib]
crate-type = [ "cdylib",]

[workspace]
members = ["."]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"

[dependencies.cross-chain-management]
features = [ "wasm-output-mode",]
default-features = false
path = ".."

[dependencies.elrond-wasm-output]
version = "0.10.5"
features = [ "wasm-output-mode",]
