[package]
name = "esdt-token-manager-wasm"
version = "0.0.0"
authors = ["Dorin Iancu <dorin.iancu@elrond.com>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"

[dependencies.esdt-token-manager]
path = ".."
features = ["wasm-output-mode"]
default-features = false

[dependencies.elrond-wasm-output]
version = "0.12.0"
features = ["wasm-output-mode"]

[workspace]
members = ["."]
