[package]
name = "transaction"
version = "0.0.0"
authors = [ "dorin-iancu <dorin.iancu@elrond.com>",]
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies.elrond-wasm]
version = "0.10.2"
path = "../../../elrond-wasm-rs/elrond-wasm"

[dependencies.elrond-wasm-derive]
version = "0.10.2"
path = "../../../elrond-wasm-rs/elrond-wasm-derive"

[dependencies.util]
version = "0.0.0"
path = "../util"

[dependencies.zero-copy-sink]
version = "0.0.0"
path = "../zero-copy-sink"

[dependencies.zero-copy-source]
version = "0.0.0"
path = "../zero-copy-source"
